# RWS

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  SUPPORT.md  TEST_AND_CI_COMPLETION_REPORT.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_demo.py  test_feishu_ws.mjs  test_simple.py  完善总结.md
.claude/: settings.local.json
.cursor/rules/: sen-ge-engineering-principles.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  update_paths.md
config/profiles/: exercise.yaml  live.yaml  open_field.yaml  surveillance.yaml  training.yaml  urban_cqb.yaml
dataset/: README.md  data.yaml
deploy/: nginx.conf  prometheus.yml
docker/: nginx.conf
docs/: ARCHITECTURE.md  CONFIGURATION.md  ENHANCEMENT_PLAN.md  FAQ.md  HARDWARE_GUIDE.md  OpenClaw_Feishu_Setup_Guide.md  PROJECT_STRUCTURE.md  README.md  TEST_COVERAGE_REPORT.md  TEST_TEMPLATES.md  TODO.md  WHY_CROSSHAIR_FIXED.md
docs/api/: README.md  grpc-api.md  quick-reference.md  rest-api.md
docs/architecture/: overview.md  quick-reference.md
docs/development/: ci-fixes.md  ci-status.md  migration-guide.md
docs/getting-started/: quick-start.md
docs/guides/: coordinate-math.md  crosshair-design.md  hardware-setup.md  occlusion-handling.md  testing.md
docs/reports/: 2024-02-15-new-features.md  2024-02-15-rflow.md  2024-02-15-team-analysis.md  2024-02-16-api-refactor.md  2024-02-16-cleanup.md  ARCHIVE.md  (+20 more)
frontend/: pubspec.yaml
profiles/: drill.yaml
scripts/: migrate_structure.py  setup_wizard.py
tests/: test_adaptive_pid.py  test_aggressive_tuning.py  test_api_client.py  test_api_server.py  test_app.py  test_audit_report.py  test_ballistic.py  test_body_compensation.py  test_config_loader.py  test_config_reload.py  test_controller.py  test_coordinate_transform.py  test_dashboard.py  test_demo.py  test_designation.py  test_diagnostic.py  test_driver.py  test_engagement.py  test_fire_routes.py  test_gimbal_visual.py  test_grpc.py  test_health_routes.py  test_iff.py  test_imu_interface.py  test_integration_enabled.py  test_interfaces.py  test_interlock.py  test_kalman.py  test_lead_angle.py  test_lifecycle_manager.py  test_metrics.py  test_metrics_routes.py  test_mission_controller.py  test_mission_report.py  test_mission_routes.py  test_multi_gimbal.py  test_multi_gimbal_e2e.py  test_multi_target.py  test_no_fire_zone.py  test_optimization.py  (+32 more)
(+200 files in other folders)
